Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/5009937/T5009937.out
T5009937.java:16:21: compiler.err.name.clash.same.erasure.no.hide: m(T5009937<java.lang.Integer>), T5009937.B, m(T5009937<java.lang.String>), T5009937.A
1 error
